twxtoverflow bug fixed

--- a/src/components/dashboard/chatSection/style.scss
+++ b/src/components/dashboard/chatSection/style.scss
@@ -104,11 +104,17 @@
 
             .answer-header{
                 padding: 1rem;
+
+                span{
+                    max-width: 475px!important;
+                    word-wrap: break-word;
+                    overflow-wrap: break-word;
+                }
                 
                 div{
                     &:first-child{
                         display: flex;
-                        align-items: center;
+                        align-items: flex-end;
                         justify-content: space-between;
                     }
 
@@ -125,12 +131,7 @@
     }
 
     form{
-        // background-color:inherit ;
-        // position: fixed;
-        // bottom: 75px;
         text-align: center;
-
-        
 
         &.chat-input{
             width: 60%;
@@ -156,7 +157,7 @@
             div{
                 position: relative;
 
-                .text-input{
+                textarea{
                     min-height: 60px;
                     max-height: 175px;
                     border-radius: 30px;
@@ -164,6 +165,7 @@
                     padding:16px 60px 8px 60px ;
                     text-align: left;
                     overflow-y: scroll;
+                    
 
                     &::-webkit-scrollbar {
                         width: 5px;
@@ -191,7 +193,7 @@
                     outline: none;
                     position: absolute;
                     right: 19.67px;
-                    top: 16px;
+                    bottom: 15px;
                     transition: all 0.1s linear;
     
                     &:active{
